cleaned up code and completed menu page

--- a/sidney-agbonkhese-coffeeshop/index.html
+++ b/sidney-agbonkhese-coffeeshop/index.html
@@ -41,25 +41,21 @@
         </ul>
       </nav>
       <section class="coffee">
-        <section class="coffee--head-body">
-          <h1 class="coffee--header">Nitro Coffee</h1>
-          <section class="coffee--text-sect">
-            <p class="coffee--text">
+        <section class="coffee__head-body">
+          <h1 class="coffee__header">Nitro Coffee</h1>
+          <section class="coffee__text-sect">
+            <p class="coffee__text">
               Coffee is a brewed drink prepared from roasted coffee beans, the
               seeds of berries from certain Coffee species
             </p>
           </section>
-          <a
-            class="coffee--head-body__btn"
-            href="./pages/menu.html"
-            style="display: block"
-          >
+          <a href="./pages/menu.html">
             <button>SHOP NOW</button>
           </a>
         </section>
         <img
           alt="coffee bag"
-          class="coffee--img"
+          class="coffee__img"
           src="./assets/coffeebeans-hero.png"
         />
       </section>
@@ -67,7 +63,7 @@
     <main>
       <section class="prod-sect">
         <h2 class="prod-sect__title">Our Products</h2>
-        <div class="prod-cards">
+        <article class="prod-cards">
           <img
             alt="coffee beans"
             src="./assets/coffeebeans-hero.png"
@@ -75,7 +71,7 @@
           />
           <h3>Coffee Beans</h3>
           <p class="prod-cards__price">$18.99</p>
-        </div>
+        </article>
         <div class="prod-cards">
           <img
             alt="cold brew"
@@ -107,39 +103,42 @@
     <footer>
       <section class="footer-sect">
         <section class="footer-group">
-          <section class="address">
+          <section class="footer-group__addr">
             <h3>Address</h3>
-            <p class="address__text">503 Broadway Penthouse</p>
-            <p class="address__text">New York</p>
+            <p class="footer-group__addr--text">503 Broadway Penthouse</p>
+            <p class="footer-group__addr--text">New York</p>
           </section>
-          <section class="hours">
+          <section class="footer-group__hrs">
             <h3>Hours</h3>
-            <p class="hours__text">
+            <p class="footer-group__hrs--text">
               <strong>Monday - Friday:</strong> 9am - 7pm
             </p>
-            <p class="hours__text">
+            <p class="footer-group__hrs--text">
               <strong>Saturday - Sunday:</strong> 10am - 5pm
             </p>
           </section>
-          <section class="social-sect">
+          <section class="footer-group__social">
             <h3>Social</h3>
-            <a class="social-sect__link" href="https://www.facebook.com">
+            <a class="footer-group__social--link" href="https://www.facebook.com">
               <img
-                class="social-sect__img"
+                class="footer-group__social--img"
                 alt="facebook"
                 src="./assets/logos/Facebook-Icon.svg"
               />
             </a>
-            <a class="social-sect__link" href="https://www.yelp.com">
+            <a class="footer-group__social--link" href="https://www.yelp.com">
               <img
-                class="social-sect__img"
+                class="footer-group__social--img"
                 alt="yelp"
                 src="./assets/logos/Yelp-Icon.svg"
               />
             </a>
-            <a class="social-sect__link" href="https://www.instagram.com">
+            <a
+              class="footer-group__social--link"
+              href="https://www.instagram.com"
+            >
               <img
-                class="social-sect__img"
+                class="footer-group__social--img"
                 alt="instagram"
                 src="./assets/logos/Instagram-Icon.svg"
               />
