made changes to the component cards

--- a/sidney-agbonkhese-coffeeshop/index.html
+++ b/sidney-agbonkhese-coffeeshop/index.html
@@ -63,32 +63,49 @@
     <main>
       <section class="prod-sect">
         <h2 class="prod-sect__title">Our Products</h2>
-        <article class="prod-cards">
-          <img
-            alt="coffee beans"
-            src="./assets/coffeebeans-hero.png"
-            class="prod-cards__coffee-images"
-          />
-          <h3>Coffee Beans</h3>
-          <p class="prod-cards__price">$18.99</p>
-        </article>
-        <div class="prod-cards">
-          <img
-            alt="cold brew"
-            src="./assets/coldbrew.png"
-            class="prod-cards__coffee-images"
-          />
-          <h3>Cold Brew</h3>
-          <p class="prod-cards__price">$4.99</p>
-        </div>
-        <div class="prod-cards">
-          <img
-            alt="In-house Brew"
-            src="./assets/inhousebrew.png"
-            class="prod-cards__coffee-images"
-          />
-          <h3>In-house Brew</h3>
-          <p class="prod-cards__price">$2.99</p>
+        <div class="cards">
+          <div class="prod-cards">
+            <img
+              alt="coffee beans"
+              src="./assets/coffeebeans-hero.png"
+              class="prod-cards__coffee-images"
+            />
+            <div class="prod-cards__text-sect">
+              <div class="prod-cards__subsect">
+                <h3 class="prod-cards__text-sect--header">Coffee Beans</h3>
+                <p class="prod-cards__text-sect--sub-text">Pack of 3</p>
+              </div>
+              <p class="prod-cards__price"><strong>$18.99</strong></p>
+            </div>
+          </div>
+          <div class="prod-cards">
+            <img
+              alt="cold brew"
+              src="./assets/coldbrew.png"
+              class="prod-cards__coffee-images"
+            />
+            <div class="prod-cards__text-sect">
+              <div class="prod-cards__subsect">
+                <h3 class="prod-cards__text-sect--header">Cold Brew</h3>
+                <p class="prod-cards__text-sect--sub-text">1 can</p>
+              </div>
+              <p class="prod-cards__price"><strong>$4.99</strong></p>
+            </div>
+          </div>
+          <div class="prod-cards">
+            <img
+              alt="In-house Brew"
+              src="./assets/inhousebrew.png"
+              class="prod-cards__coffee-images"
+            />
+            <div class="prod-cards__text-sect">
+              <div class="prod-cards__subsect">
+                <h3 class="prod-cards__text-sect--header">In-house Brew</h3>
+                <p class="prod-cards__text-sect--sub-text">1 cup</p>
+              </div>
+              <p class="prod-cards__price"><strong>$2.99</strong></p>
+            </div>
+          </div>
         </div>
         <a class="view-btn" href="./pages/menu.html">
           <button>VIEW ALL</button>
@@ -119,7 +136,10 @@
           </section>
           <section class="footer-group__social">
             <h3>Social</h3>
-            <a class="footer-group__social--link" href="https://www.facebook.com">
+            <a
+              class="footer-group__social--link"
+              href="https://www.facebook.com"
+            >
               <img
                 class="footer-group__social--img"
                 alt="facebook"
